--- a/style.css
+++ b/style.css
@@ -1,26 +1,37 @@
 /* style.css */
 body{
   background: rgb(245,245,245);
-  color: green;
-  font-size: 25px;
-  font-family: Helvetica;
+  color: black;
+  font-size: 12px;
+  font-family:'Roboto Condensed', sans-serif;
 }
 h1{
-  font-family: Courier;
-  color: red;
+  font-family: Helvetica;
+  color: black;
   font-weight: lighter;
-  font-size: 10px;
+  font-size: 20px;
 }
 h2 {
-  font-family: Courier;
-  color: pink;
+  font-family: Helvetica;
+  color: black;
   font-weight: lighter;
-  font-size: 8px;
+  font-size: 18px;
 }
 a {
-  color: yellow;
+  color: black;
 }
 a:hover {
   text-decoration: none;
-  color: purple;
+  color: red;
+}
+
+.blue-title  {
+  color: blue;
+
+
+}
+#baseline p {
+  font-weight: bold;
+  color: red;
+
 }
